--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@tailwindcss/custom-forms": "^0.2.1",
+        "@tailwindcss/ui": "^0.4.0",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "browser-sync": "^2.26.12",
         "cross-env": "^7.0",
-        "deepmerge": "^4.2.2",
-        "fibers": "^5.0.0",
-        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
+        "postcss-css-variables": "^0.17.0",
+        "postcss-import": "^12.0.1",
+        "postcss-nested": "^4.2.3",
+        "purify-css": "^1.2.5",
+        "purifycss-webpack": "^0.7.0",
         "resolve-url-loader": "^2.3.1",
-        "sass-loader": "^8.0.2",
         "sass": "^1.26.10",
-        "vue-template-compiler": "^2.6.10",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "^1.6.0",
         "vue": "^2.5.17",
-        "vuetify-loader": "^1.5.0",
-        "vuetify": "^2.3.3"
+        "vue-template-compiler": "^2.6.10"
     }
 }
